--- a/hw_asr/config.json
+++ b/hw_asr/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "default_config",
+  "name": "librispeech-clean",
   "n_gpu": 1,
   "preprocessing": {
     "sr": 16000,
@@ -11,11 +11,11 @@
     "log_spec": true
   },
   "augmentations": {
-    "wave": [],
-    "spectrogram": []
+    "wave": [ ],
+    "spectrogram": [ ]
   },
   "arch": {
-    "type": "BaselineModel",
+    "type": "DeepSpeech2",
     "args": {
       "n_feats": 128,
       "fc_hidden": 512
@@ -23,7 +23,7 @@
   },
   "data": {
     "train": {
-      "batch_size": 20,
+      "batch_size": 50,
       "num_workers": 5,
       "datasets": [
         {
@@ -31,28 +31,46 @@
           "args": {
             "part": "train-clean-100",
             "max_audio_length": 20.0,
-            "max_text_length": 200
+            "max_text_length": 300
+          }
+        },
+        {
+          "type": "LibrispeechDataset",
+          "args": {
+            "part": "train-clean-360",
+            "max_audio_length": 20.0,
+            "max_text_length": 300
           }
         }
       ]
     },
     "val": {
-      "batch_size": 20,
+      "batch_size": 50,
       "num_workers": 5,
       "datasets": [
         {
           "type": "LibrispeechDataset",
           "args": {
-            "part": "dev-clean",
-            "max_audio_length": 20.0,
-            "max_text_length": 200
+            "part": "dev-clean"
+          }
+        }
+      ]
+    },
+    "test": {
+      "batch_size": 50,
+      "num_workers": 5,
+      "datasets": [
+        {
+          "type": "LibrispeechDataset",
+          "args": {
+            "part": "test-clean"
           }
         }
       ]
     }
   },
   "optimizer": {
-    "type": "SGD",
+    "type": "Adam",
     "args": {
       "lr": 3e-4
     }
@@ -73,28 +91,54 @@
       "args": {
         "name": "CER (argmax)"
       }
+    },
+    {
+      "type": "BeamSearchWithLMWERMetric",
+      "args": {
+        "name": "WER (BeamSearch + LM)"
+      }
+    },
+    {
+      "type": "BeamSearchWithLMCERMetric",
+      "args": {
+        "name": "CER (BeamSearch + LM)"
+      }
+    },
+    {
+      "type": "OracleWERMetric",
+      "args": {
+        "name": "WER (oracle)"
+      }
+    },
+    {
+      "type": "OracleCERMetric",
+      "args": {
+        "name": "CER (oracle)"
+      }
     }
   ],
   "lr_scheduler": {
     "type": "OneCycleLR",
     "args": {
-      "steps_per_epoch": 100,
-      "epochs": 50,
+      "steps_per_epoch": 1000,
+      "epochs": 40,
       "anneal_strategy": "cos",
-      "max_lr": 4e-3,
+      "max_lr": 5e-4,
       "pct_start": 0.2
     }
   },
   "trainer": {
-    "epochs": 50,
+    "epochs": 40,
     "save_dir": "saved/",
     "save_period": 5,
     "verbosity": 2,
     "monitor": "min val_loss",
-    "early_stop": 100,
+    "early_stop": 1000,
     "visualize": "wandb",
-    "wandb_project": "asr_project",
-    "len_epoch": 100,
-    "grad_norm_clip": 10
+    "wandb_project": "asr_project_final",
+    "len_epoch": 1000,
+    "grad_norm_clip": 10,
+    "log_step": 200
   }
 }
+
